# cppzmqzoltanext

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  actor_8cpp.html  actor_8cpp__incl.map  actor_8cpp__incl.md5  actor_8cpp_source.html  actor_8h.html  actor_8h.js  actor_8h__dep__incl.map  actor_8h__dep__incl.md5  actor_8h__incl.map  actor_8h__incl.md5  actor_8h_source.html  annotated.html  annotated_dup.js  classes.html  classzmqzext_1_1actor__t-members.html  classzmqzext_1_1actor__t.html  classzmqzext_1_1actor__t.js  classzmqzext_1_1loop__t-members.html  classzmqzext_1_1loop__t.html  classzmqzext_1_1loop__t.js  classzmqzext_1_1poller__t-members.html  classzmqzext_1_1poller__t.html  classzmqzext_1_1poller__t.js  classzmqzext_1_1signal__t-members.html  classzmqzext_1_1signal__t.html  classzmqzext_1_1signal__t.js  classzmqzext_1_1zpl__config__t-members.html  classzmqzext_1_1zpl__config__t.html  classzmqzext_1_1zpl__config__t.js  classzmqzext_1_1zpl__error.html  classzmqzext_1_1zpl__error__coll__graph.map  classzmqzext_1_1zpl__error__coll__graph.md5  classzmqzext_1_1zpl__error__inherit__graph.map  classzmqzext_1_1zpl__error__inherit__graph.md5  (+120 more)
cmake/: cppzmqzoltanextConfig.cmake.in
docs/: actor_requirements.md  zpl_config_requirements.md
examples/: CMakeLists.txt  full_example.cpp  zpl_config_example.cpp
include/cppzmqzoltanext/: actor.h  helpers.h  interrupt.h  loop.h  poller.h  signal.h  zpl_config.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_2.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  pages_0.js  searchdata.js  (+9 more)
src/: CMakeLists.txt  actor.cpp  helpers.cpp  interrupt.cpp  loop.cpp  poller.cpp  signal.cpp  zpl_config.cpp
tests/: CMakeLists.txt  UTestActor.cpp  UTestLoop.cpp  UTestPoller.cpp  UTestZplConfig.cpp  utils.h
